# tantivy

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
benches/: agg_bench.rs  analyzer.rs  and_or_queries.rs  bool_queries_with_range.rs  exists_json.rs  index-bench.rs  range_queries.rs  range_query.rs
bindings/nodejs/: Cargo.toml  LICENSE  index.js  package.json  test.mjs
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  README.md
bindings/python/src/: lib.rs
bindings/python/tests/: test_lucivy.py
bitpacker/: Cargo.toml
bitpacker/benches/: bench.rs
columnar/: Cargo.toml  README.md
columnar/benches/: bench_access.rs  bench_column_values_get.rs  bench_create_column_values.rs  bench_first_vals.rs  bench_merge.rs  bench_optional_index.rs  bench_values_u128.rs  bench_values_u64.rs  common.rs
columnar/columnar-cli/: Cargo.toml
columnar/columnar-cli-inspect/: Cargo.toml
columnar/columnar-cli-inspect/src/: main.rs
columnar/src/: lib.rs
common/: Cargo.toml
common/benches/: bench.rs
common/src/: file_slice.rs  group_by.rs  json_path_writer.rs  lib.rs
doc/: book.toml
doc/src/: avant-propos.md  basis.md  index_sorting.md  json.md
docs/7-mars-2026-20h50/: 01-bindings-nodejs-napi-rs.md
examples/: aggregation.rs  basic_search.rs  custom_collector.rs  custom_tokenizer.rs  date_time_field.rs  deleting_updating_documents.rs  faceted_search.rs  faceted_search_with_tweaked_score.rs  filter_aggregation.rs  fuzzy_search.rs  index_from_multiple_threads.rs  index_with_json.rs  integer_range_search.rs  ip_field.rs  iterating_docs_and_positions.rs  json_field.rs  phrase_prefix_search.rs  pre_tokenized_text.rs  snippet.rs  stop_words.rs  warmer.rs
lucivy/: Cargo.toml  pyproject.toml
lucivy/src/: lib.rs
lucivy_fts/rust/: Cargo.toml  build.rs  cbindgen.toml
lucivy_fts/rust/src/: bridge.rs  directory.rs  handle.rs  lib.rs  query.rs  tokenizer.rs
ownedbytes/: Cargo.toml
query-grammar/: Cargo.toml  README.md
src/: compat_tests.rs  error.rs  functional_test.rs  future_result.rs  lib.rs  macros.rs
src/aggregation/: README.md  accessor_helpers.rs  agg_data.rs  agg_req.rs  agg_result.rs  collector.rs  date.rs  intermediate_agg_result.rs  mod.rs
src/collector/: count_collector.rs  facet_collector.rs  filter_collector_wrapper.rs  mod.rs  multi_collector.rs  tests.rs  top_score_collector.rs
src/core/: executor.rs  mod.rs  searcher.rs  tests.rs
src/directory/: directory.rs  directory_lock.rs  error.rs  footer.rs  managed_directory.rs
src/fastfield/: facet_reader.rs  mod.rs  readers.rs  writer.rs
src/index/: index.rs  index_meta.rs  inverted_index_reader.rs  mod.rs  segment_component.rs  segment_id.rs  segment_reader.rs
src/indexer/: delete_queue.rs  index_writer.rs  index_writer_status.rs  merger.rs  mod.rs  operation.rs  prepared_commit.rs  (+4 more)
sstable/: Cargo.toml  README.md
stacker/: Cargo.toml
tantivy_fts/rust/: Cargo.toml  build.rs  cbindgen.toml
tantivy_fts/rust/src/: bridge.rs  directory.rs  handle.rs  lib.rs  query.rs  tokenizer.rs
tokenizer-api/: Cargo.toml  README.md
(+133 files in other folders)
