[package]
name = "lucivy-napi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fast BM25 full-text search index for Node.js, powered by Lucivy"

[lib]
crate-type = ["cdylib"]

[dependencies]
lucivy-fts = { path = "../../lucivy_fts/rust" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
