[package]
name = "lucivy-columnar-inspect"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
lucivy = {path="../..", package="lucivy"}
columnar = {path="../", package="lucivy-columnar"}
common = {path="../../common", package="lucivy-common"}

[workspace]
members = []

[profile.release]
debug = true
#debug-assertions = true
#overflow-checks = true
