[package]
name = "lucivy-fts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C FFI bindings for Lucivy full-text search, used as a rag3db extension"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cxx = "1.0"
regex = "1"
regex-syntax = "0.8"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = "z"
lto = "thin"
