[package]
name = "tantivy-fts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C FFI bindings for Tantivy full-text search, used as a rag3db extension"

[lib]
crate-type = ["staticlib"]

[dependencies]
ld-tantivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "thin"
